crates/slate/tests/snapshots/gnu_integer_complex.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn __muldc3(a: f64, b: f64, c: f64, d: f64) -> num_complex::Complex<f64>;
    fn __divdc3(a: f64, b: f64, c: f64, d: f64) -> num_complex::Complex<f64>;
    fn __mulsc3(a: f32, b: f32, c: f32, d: f32) -> num_complex::Complex<f32>;
    fn __divsc3(a: f32, b: f32, c: f32, d: f32) -> num_complex::Complex<f32>;
}

static mut global_value: num_complex::Complex<i32> = num_complex::Complex { re: 17, im: 19 };

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut first: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 0 };
    let mut second: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 0 };
    let mut imaginary: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 5;
    let _v2: i32 = 0;
    let _v3: num_complex::Complex<i32> = num_complex::Complex { re: _v1, im: _v2 };
    let _v4: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 7 };
    let _v5: num_complex::Complex<i32> = num_complex::Complex { re: _v3.re + _v4.re, im: _v3.im + _v4.im };
    first = _v5;
    let _v6: i32 = -3;
    let _v7: i32 = 0;
    let _v8: num_complex::Complex<i32> = num_complex::Complex { re: _v6, im: _v7 };
    let _v9: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 11 };
    let _v10: num_complex::Complex<i32> = num_complex::Complex { re: _v8.re + _v9.re, im: _v8.im + _v9.im };
    second = _v10;
    let _v11: num_complex::Complex<i32> = num_complex::Complex { re: 0, im: 13 };
    imaginary = _v11;
    let _v12: *mut i8 = b"%d %d %d %d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v13: num_complex::Complex<i32> = first;
    let _v14: i32 = _v13.re;
    let _v15: num_complex::Complex<i32> = first;
    let _v16: i32 = _v15.im;
    let _v17: num_complex::Complex<i32> = second;
    let _v18: i32 = _v17.re;
    let _v19: num_complex::Complex<i32> = second;
    let _v20: i32 = _v19.im;
    let _v21: num_complex::Complex<i32> = imaginary;
    let _v22: i32 = _v21.re;
    let _v23: num_complex::Complex<i32> = imaginary;
    let _v24: i32 = _v23.im;
    let _v25: num_complex::Complex<i32> = unsafe { global_value };
    let _v26: i32 = _v25.re;
    let _v27: num_complex::Complex<i32> = unsafe { global_value };
    let _v28: i32 = _v27.im;
    let _v29: i32 = unsafe { printf(_v12 as *const i8, _v14, _v16, _v18, _v20, _v22, _v24, _v26, _v28) };
    let _v30: i32 = 0;
    __retval = _v30;
    let _v31: i32 = __retval;
    std::process::exit(_v31 as i32);
}
