crates/slate/tests/snapshots/gnu_libc_allocation.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
struct __SlateAllocaFrame0(i32, *mut i8, *mut i8);

mod __slate_bitfields {
    #[bitfields::bitfield(u8, new = false, from_into_bits = false, from_traits = false, default = false, debug = false, builder = false, bit_ops = false)]
    pub struct __SlateBitfield_obstack_10 {
        #[bits(1)]
        pub _reserved_0: u128,
        #[bits(1)]
        pub maybe_empty_object: u32,
        #[bits(6)]
        pub _reserved_1: u128,
    }
}

#[repr(C)]
#[derive(Clone, Copy)]
struct _obstack_chunk {
    limit: *mut i8,
    prev: *mut _obstack_chunk,
    contents: [i8; 4],
}


#[repr(C)]
#[derive(Clone, Copy)]
union _unnamed_at__home_takashi_Projects_slate_libc_shim_include_obstack_h_28_3_ {
    tempint: i64,
    tempptr: *mut core::ffi::c_void,
}


#[repr(C)]
#[derive(Clone, Copy)]
union anon_0 {
    tempint: i64,
    tempptr: *mut core::ffi::c_void,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct obstack {
    __bitfield_0: i64,
    __bitfield_1: *mut _obstack_chunk,
    __bitfield_2: *mut i8,
    __bitfield_3: *mut i8,
    __bitfield_4: *mut i8,
    __bitfield_5: anon_0,
    __bitfield_6: i32,
    __bitfield_7: *mut i32,
    __bitfield_8: *mut i32,
    __bitfield_9: *mut core::ffi::c_void,
    __bitfield_10: __slate_bitfields::__SlateBitfield_obstack_10,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn reallocarray(_0: *mut core::ffi::c_void, _1: usize, _2: usize) -> *mut core::ffi::c_void;
    fn memalign(_0: usize, _1: usize) -> *mut core::ffi::c_void;
    fn valloc(_0: usize) -> *mut core::ffi::c_void;
    fn pvalloc(_0: usize) -> *mut core::ffi::c_void;
    fn sysconf(_0: i32) -> i64;
    fn malloc_usable_size(_0: *mut core::ffi::c_void) -> usize;
    fn mallopt(_0: i32, _1: i32) -> i32;
    fn free(_0: *mut core::ffi::c_void);
    fn _obstack_begin(_0: *mut obstack, _1: i32, _2: i32, _3: Option<unsafe extern "C" fn(i64) -> *mut core::ffi::c_void>, _4: Option<unsafe extern "C" fn(*mut core::ffi::c_void)>) -> i32;
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn _obstack_newchunk(_0: *mut obstack, _1: i32);
    fn memcpy(_0: *mut core::ffi::c_void, _1: *const core::ffi::c_void, _2: usize) -> *mut core::ffi::c_void;
    fn strcmp(_0: *const i8, _1: *const i8) -> i32;
    fn obstack_free(_0: *mut obstack, _1: *mut core::ffi::c_void);
}

fn gnu_allocation_extensions() -> i32 {
    let mut __retval: i32 = 0;
    let mut values: *mut i32 = std::ptr::null_mut();
    let mut aligned: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut page: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut rounded: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut page_size: i64 = 0;
    let mut total: i32 = 0;
    let _v0: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v1: u64 = 4;
    let _v2: u64 = 4;
    let _v3: *mut core::ffi::c_void = unsafe { reallocarray(_v0 as *mut core::ffi::c_void, _v1 as usize, _v2 as usize) };
    let _v4: *mut i32 = _v3 as *mut i32;
    values = _v4;
    let _v5: u64 = 64;
    let _v6: u64 = 80;
    let _v7: *mut core::ffi::c_void = unsafe { memalign(_v5 as usize, _v6 as usize) };
    aligned = _v7;
    let _v8: u64 = 1;
    let _v9: *mut core::ffi::c_void = unsafe { valloc(_v8 as usize) };
    page = _v9;
    let _v10: u64 = 1;
    let _v11: *mut core::ffi::c_void = unsafe { pvalloc(_v10 as usize) };
    rounded = _v11;
    let _v12: i32 = 30;
    let _v13: i64 = unsafe { sysconf(_v12 as i32) };
    page_size = _v13;
    let _v14: i32 = 0;
    total = _v14;
    {
        let mut index: i32 = 0;
        let _v15: i32 = 0;
        index = _v15;
        loop {
            let _v16: i32 = index;
            let _v17: i32 = 4;
            let _v18: bool = _v16 < _v17;
            if !_v18 {
                break;
            }
            {
                let _v19: i32 = index;
                let _v20: i32 = 1;
                let _v21: i32 = _v19 + _v20;
                let _v22: i32 = index;
                let _v23: i64 = _v22 as i64;
                let _v24: *mut i32 = values;
                let _v25: *mut i32 = unsafe { _v24.offset(_v23 as isize) };
                unsafe {
                    *_v25 = _v21;
                }
            }
            let _v26: i32 = index;
            let _v27: i32 = _v26 + 1;
            index = _v27;
        }
    }
    let _v28: i64 = 0;
    let _v29: *mut i32 = values;
    let _v30: *mut i32 = unsafe { _v29.add(0) };
    let _v31: i32 = unsafe { *_v30 };
    let _v32: i64 = 1;
    let _v33: *mut i32 = values;
    let _v34: *mut i32 = unsafe { _v33.add(1) };
    let _v35: i32 = unsafe { *_v34 };
    let _v36: i32 = _v31 + _v35;
    let _v37: i64 = 2;
    let _v38: *mut i32 = values;
    let _v39: *mut i32 = unsafe { _v38.add(2) };
    let _v40: i32 = unsafe { *_v39 };
    let _v41: i32 = _v36 + _v40;
    let _v42: i64 = 3;
    let _v43: *mut i32 = values;
    let _v44: *mut i32 = unsafe { _v43.add(3) };
    let _v45: i32 = unsafe { *_v44 };
    let _v46: i32 = _v41 + _v45;
    let _v47: i32 = total;
    let _v48: i32 = _v47 + _v46;
    total = _v48;
    let _v49: *mut i32 = values;
    let _v50: *mut core::ffi::c_void = _v49 as *mut core::ffi::c_void;
    let _v51: u64 = (unsafe { malloc_usable_size(_v50 as *mut core::ffi::c_void) }) as u64;
    let _v52: u64 = 4;
    let _v53: u64 = 4;
    let _v54: u64 = _v52 * _v53;
    let _v55: bool = _v51 >= _v54;
    let _v56: i32 = _v55 as i32;
    let _v57: i32 = total;
    let _v58: i32 = _v57 + _v56;
    total = _v58;
    let _v59: *mut core::ffi::c_void = aligned;
    let _v60: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v61: bool = _v59 != _v60;
    let _v62: bool = if _v61 {
        let _v63: *mut core::ffi::c_void = aligned;
        let _v64: u64 = _v63 as u64;
        let _v65: u64 = 64;
        let _v66: u64 = _v64 % _v65;
        let _v67: u64 = 0;
        let _v68: bool = _v66 == _v67;
        _v68
    } else {
        let _v69: bool = false;
        _v69
    };
    let _v70: i32 = _v62 as i32;
    let _v71: i32 = total;
    let _v72: i32 = _v71 + _v70;
    total = _v72;
    let _v73: *mut core::ffi::c_void = page;
    let _v74: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v75: bool = _v73 != _v74;
    let _v76: bool = if _v75 {
        let _v77: *mut core::ffi::c_void = page;
        let _v78: u64 = _v77 as u64;
        let _v79: i64 = page_size;
        let _v80: u64 = _v79 as u64;
        let _v81: u64 = _v78 % _v80;
        let _v82: u64 = 0;
        let _v83: bool = _v81 == _v82;
        _v83
    } else {
        let _v84: bool = false;
        _v84
    };
    let _v85: i32 = _v76 as i32;
    let _v86: i32 = total;
    let _v87: i32 = _v86 + _v85;
    total = _v87;
    let _v88: *mut core::ffi::c_void = rounded;
    let _v89: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v90: bool = _v88 != _v89;
    let _v91: bool = if _v90 {
        let _v92: *mut core::ffi::c_void = rounded;
        let _v93: u64 = _v92 as u64;
        let _v94: i64 = page_size;
        let _v95: u64 = _v94 as u64;
        let _v96: u64 = _v93 % _v95;
        let _v97: u64 = 0;
        let _v98: bool = _v96 == _v97;
        _v98
    } else {
        let _v99: bool = false;
        _v99
    };
    let _v100: i32 = _v91 as i32;
    let _v101: i32 = total;
    let _v102: i32 = _v101 + _v100;
    total = _v102;
    let _v103: *mut core::ffi::c_void = rounded;
    let _v104: u64 = (unsafe { malloc_usable_size(_v103 as *mut core::ffi::c_void) }) as u64;
    let _v105: i64 = page_size;
    let _v106: u64 = _v105 as u64;
    let _v107: bool = _v104 >= _v106;
    let _v108: i32 = _v107 as i32;
    let _v109: i32 = total;
    let _v110: i32 = _v109 + _v108;
    total = _v110;
    let _v111: i32 = -5;
    let _v112: i32 = 1;
    let _v113: i32 = unsafe { mallopt(_v111 as i32, _v112 as i32) };
    let _v114: i32 = 0;
    let _v115: bool = _v113 != _v114;
    let _v116: i32 = _v115 as i32;
    let _v117: i32 = total;
    let _v118: i32 = _v117 + _v116;
    total = _v118;
    let _v119: *mut i32 = values;
    let _v120: *mut core::ffi::c_void = _v119 as *mut core::ffi::c_void;
    unsafe { free(_v120 as *mut core::ffi::c_void) };
    let _v121: *mut core::ffi::c_void = aligned;
    unsafe { free(_v121 as *mut core::ffi::c_void) };
    let _v122: *mut core::ffi::c_void = page;
    unsafe { free(_v122 as *mut core::ffi::c_void) };
    let _v123: *mut core::ffi::c_void = rounded;
    unsafe { free(_v123 as *mut core::ffi::c_void) };
    let _v124: i32 = total;
    __retval = _v124;
    let _v125: i32 = __retval;
    return _v125;
}

fn gnu_obstack_extensions() -> i32 {
    let mut __retval: i32 = 0;
    let mut storage: obstack = obstack { __bitfield_0: 0, __bitfield_1: std::ptr::null_mut(), __bitfield_2: std::ptr::null_mut(), __bitfield_3: std::ptr::null_mut(), __bitfield_4: std::ptr::null_mut(), __bitfield_5: anon_0 { tempint: 0 }, __bitfield_6: 0, __bitfield_7: std::ptr::null_mut(), __bitfield_8: std::ptr::null_mut(), __bitfield_9: std::ptr::null_mut(), __bitfield_10: unsafe { std::mem::transmute::<u8, __slate_bitfields::__SlateBitfield_obstack_10>(0) } };
    let mut __slate_alloca_frame0: __SlateAllocaFrame0 = __SlateAllocaFrame0(0, std::ptr::null_mut(), std::ptr::null_mut());
    let _v0: i32 = 0;
    __slate_alloca_frame0.0 = _v0;
    let _v1: i32 = 0;
    let _v2: i32 = 0;
    let _v3: Option<unsafe extern "C" fn(i64) -> *mut core::ffi::c_void> = unsafe { std::mem::transmute::<Option<unsafe extern "C" fn(u64) -> *mut core::ffi::c_void>, Option<unsafe extern "C" fn(i64) -> *mut core::ffi::c_void>>(Some(malloc)) };
    let _v4: i32 = unsafe { _obstack_begin(std::ptr::addr_of_mut!(storage) as *mut obstack, _v1 as i32, _v2 as i32, _v3, Some(free)) };
    let _v5: i64 = 3;
    unsafe {
        storage.__bitfield_5.tempint = _v5;
    }
    let _v6: *mut i8 = storage.__bitfield_3;
    let _v7: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v8: *mut i8 = unsafe { _v6.offset(_v7 as isize) };
    let _v9: i32 = 1;
    let _v10: *mut i8 = unsafe { _v8.add(1) };
    let _v11: *mut i8 = storage.__bitfield_4;
    let _v12: bool = _v10 > _v11;
    let _v13: i32 = if _v12 {
        let _v14: i64 = unsafe { storage.__bitfield_5.tempint };
        let _v15: i64 = 1;
        let _v16: i64 = _v14 + _v15;
        let _v17: i32 = _v16 as i32;
        unsafe { _obstack_newchunk(std::ptr::addr_of_mut!(storage) as *mut obstack, _v17 as i32) };
        let _v18: i32 = 0;
        _v18
    } else {
        let _v19: i32 = 0;
        _v19
    };
    let _v20: *mut i8 = storage.__bitfield_3;
    let _v21: *mut core::ffi::c_void = _v20 as *mut core::ffi::c_void;
    let _v22: *mut i8 = b"gnu\0".as_ptr() as *mut i8;
    let _v23: *mut core::ffi::c_void = _v22 as *mut core::ffi::c_void;
    let _v24: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v25: u64 = _v24 as u64;
    let _v26: *mut core::ffi::c_void = unsafe { memcpy(_v21 as *mut core::ffi::c_void, _v23 as *const core::ffi::c_void, _v25 as usize) };
    let _v27: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v28: *mut i8 = storage.__bitfield_3;
    let _v29: *mut i8 = unsafe { _v28.offset(_v27 as isize) };
    storage.__bitfield_3 = _v29;
    let _v30: i8 = 0;
    let _v31: *mut i8 = storage.__bitfield_3;
    let _v32: i32 = 1;
    let _v33: *mut i8 = unsafe { _v31.add(1) };
    storage.__bitfield_3 = _v33;
    unsafe {
        *_v31 = _v30;
    }
    let _v34: *mut i8 = storage.__bitfield_3;
    let _v35: *mut i8 = storage.__bitfield_2;
    let _v36: bool = _v34 == _v35;
    let _v37: i32 = if _v36 {
        let _v38: u32 = 1;
        let _v39: u32 = (_v38 as u32) << 31 >> 31;
        storage.__bitfield_10.set_maybe_empty_object((_v38 as u32) << 31 >> 31);
        let _v40: i32 = 0;
        _v40
    } else {
        let _v41: i32 = 0;
        _v41
    };
    let _v42: *mut i8 = storage.__bitfield_2;
    let _v43: *mut core::ffi::c_void = _v42 as *mut core::ffi::c_void;
    unsafe {
        storage.__bitfield_5.tempptr = _v43;
    }
    let _v44: *mut i8 = storage.__bitfield_3;
    let _v45: *mut i8 = std::ptr::null_mut();
    let _v46: i64 = unsafe { _v44.offset_from(_v45) as i64 };
    let _v47: i32 = storage.__bitfield_6;
    let _v48: i64 = _v47 as i64;
    let _v49: i64 = _v46 + _v48;
    let _v50: i32 = storage.__bitfield_6;
    let _v51: i32 = !_v50;
    let _v52: i64 = _v51 as i64;
    let _v53: i64 = _v49 & _v52;
    let _v54: *mut i8 = _v53 as *mut i8;
    storage.__bitfield_3 = _v54;
    let _v55: *mut i8 = storage.__bitfield_3;
    let _v56: *mut _obstack_chunk = storage.__bitfield_1;
    let _v57: *mut i8 = _v56 as *mut i8;
    let _v58: i64 = unsafe { _v55.offset_from(_v57) as i64 };
    let _v59: *mut i8 = storage.__bitfield_4;
    let _v60: *mut _obstack_chunk = storage.__bitfield_1;
    let _v61: *mut i8 = _v60 as *mut i8;
    let _v62: i64 = unsafe { _v59.offset_from(_v61) as i64 };
    let _v63: bool = _v58 > _v62;
    let _v64: *mut i8 = if _v63 {
        let _v65: *mut i8 = storage.__bitfield_4;
        storage.__bitfield_3 = _v65;
        _v65
    } else {
        let _v66: *mut i8 = std::ptr::null_mut();
        _v66
    };
    let _v67: *mut i8 = storage.__bitfield_3;
    storage.__bitfield_2 = _v67;
    let _v68: *mut core::ffi::c_void = unsafe { storage.__bitfield_5.tempptr };
    let _v69: *mut i8 = _v68 as *mut i8;
    __slate_alloca_frame0.2 = _v69;
    let _v70: i64 = 4;
    unsafe {
        storage.__bitfield_5.tempint = _v70;
    }
    let _v71: *mut i8 = storage.__bitfield_3;
    let _v72: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v73: *mut i8 = unsafe { _v71.offset(_v72 as isize) };
    let _v74: i32 = 1;
    let _v75: *mut i8 = unsafe { _v73.add(1) };
    let _v76: *mut i8 = storage.__bitfield_4;
    let _v77: bool = _v75 > _v76;
    let _v78: i32 = if _v77 {
        let _v79: i64 = unsafe { storage.__bitfield_5.tempint };
        let _v80: i64 = 1;
        let _v81: i64 = _v79 + _v80;
        let _v82: i32 = _v81 as i32;
        unsafe { _obstack_newchunk(std::ptr::addr_of_mut!(storage) as *mut obstack, _v82 as i32) };
        let _v83: i32 = 0;
        _v83
    } else {
        let _v84: i32 = 0;
        _v84
    };
    let _v85: *mut i8 = storage.__bitfield_3;
    let _v86: *mut core::ffi::c_void = _v85 as *mut core::ffi::c_void;
    let _v87: *mut i8 = b"libc\0".as_ptr() as *mut i8;
    let _v88: *mut core::ffi::c_void = _v87 as *mut core::ffi::c_void;
    let _v89: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v90: u64 = _v89 as u64;
    let _v91: *mut core::ffi::c_void = unsafe { memcpy(_v86 as *mut core::ffi::c_void, _v88 as *const core::ffi::c_void, _v90 as usize) };
    let _v92: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v93: *mut i8 = storage.__bitfield_3;
    let _v94: *mut i8 = unsafe { _v93.offset(_v92 as isize) };
    storage.__bitfield_3 = _v94;
    let _v95: i8 = 0;
    let _v96: *mut i8 = storage.__bitfield_3;
    let _v97: i32 = 1;
    let _v98: *mut i8 = unsafe { _v96.add(1) };
    storage.__bitfield_3 = _v98;
    unsafe {
        *_v96 = _v95;
    }
    let _v99: *mut i8 = storage.__bitfield_3;
    let _v100: *mut i8 = storage.__bitfield_2;
    let _v101: bool = _v99 == _v100;
    let _v102: i32 = if _v101 {
        let _v103: u32 = 1;
        let _v104: u32 = (_v103 as u32) << 31 >> 31;
        storage.__bitfield_10.set_maybe_empty_object((_v103 as u32) << 31 >> 31);
        let _v105: i32 = 0;
        _v105
    } else {
        let _v106: i32 = 0;
        _v106
    };
    let _v107: *mut i8 = storage.__bitfield_2;
    let _v108: *mut core::ffi::c_void = _v107 as *mut core::ffi::c_void;
    unsafe {
        storage.__bitfield_5.tempptr = _v108;
    }
    let _v109: *mut i8 = storage.__bitfield_3;
    let _v110: *mut i8 = std::ptr::null_mut();
    let _v111: i64 = unsafe { _v109.offset_from(_v110) as i64 };
    let _v112: i32 = storage.__bitfield_6;
    let _v113: i64 = _v112 as i64;
    let _v114: i64 = _v111 + _v113;
    let _v115: i32 = storage.__bitfield_6;
    let _v116: i32 = !_v115;
    let _v117: i64 = _v116 as i64;
    let _v118: i64 = _v114 & _v117;
    let _v119: *mut i8 = _v118 as *mut i8;
    storage.__bitfield_3 = _v119;
    let _v120: *mut i8 = storage.__bitfield_3;
    let _v121: *mut _obstack_chunk = storage.__bitfield_1;
    let _v122: *mut i8 = _v121 as *mut i8;
    let _v123: i64 = unsafe { _v120.offset_from(_v122) as i64 };
    let _v124: *mut i8 = storage.__bitfield_4;
    let _v125: *mut _obstack_chunk = storage.__bitfield_1;
    let _v126: *mut i8 = _v125 as *mut i8;
    let _v127: i64 = unsafe { _v124.offset_from(_v126) as i64 };
    let _v128: bool = _v123 > _v127;
    let _v129: *mut i8 = if _v128 {
        let _v130: *mut i8 = storage.__bitfield_4;
        storage.__bitfield_3 = _v130;
        _v130
    } else {
        let _v131: *mut i8 = std::ptr::null_mut();
        _v131
    };
    let _v132: *mut i8 = storage.__bitfield_3;
    storage.__bitfield_2 = _v132;
    let _v133: *mut core::ffi::c_void = unsafe { storage.__bitfield_5.tempptr };
    let _v134: *mut i8 = _v133 as *mut i8;
    __slate_alloca_frame0.1 = _v134;
    let _v135: *mut i8 = __slate_alloca_frame0.2;
    let _v136: *mut i8 = b"gnu\0".as_ptr() as *mut i8;
    let _v137: i32 = unsafe { strcmp(_v135 as *const i8, _v136 as *const i8) };
    let _v138: i32 = 0;
    let _v139: bool = _v137 == _v138;
    let _v140: i32 = _v139 as i32;
    let _v141: i32 = __slate_alloca_frame0.0;
    let _v142: i32 = _v141 + _v140;
    __slate_alloca_frame0.0 = _v142;
    let _v143: *mut i8 = __slate_alloca_frame0.1;
    let _v144: *mut i8 = b"libc\0".as_ptr() as *mut i8;
    let _v145: i32 = unsafe { strcmp(_v143 as *const i8, _v144 as *const i8) };
    let _v146: i32 = 0;
    let _v147: bool = _v145 == _v146;
    let _v148: i32 = _v147 as i32;
    let _v149: i32 = __slate_alloca_frame0.0;
    let _v150: i32 = _v149 + _v148;
    __slate_alloca_frame0.0 = _v150;
    let _v151: *mut i8 = storage.__bitfield_3;
    let _v152: *mut i8 = storage.__bitfield_2;
    let _v153: i64 = unsafe { _v151.offset_from(_v152) as i64 };
    let _v154: u32 = _v153 as u32;
    let _v155: u32 = 0;
    let _v156: bool = _v154 == _v155;
    let _v157: i32 = _v156 as i32;
    let _v158: i32 = __slate_alloca_frame0.0;
    let _v159: i32 = _v158 + _v157;
    __slate_alloca_frame0.0 = _v159;
    let _v160: *mut i8 = std::ptr::null_mut();
    let _v161: *mut _obstack_chunk = storage.__bitfield_1;
    let _v162: *mut i8 = _v161 as *mut i8;
    let _v163: i64 = unsafe { _v160.offset_from(_v162) as i64 };
    unsafe {
        storage.__bitfield_5.tempint = _v163;
    }
    let _v164: i64 = unsafe { storage.__bitfield_5.tempint };
    let _v165: i64 = 0;
    let _v166: bool = _v164 > _v165;
    let _v167: bool = if _v166 {
        let _v168: i64 = unsafe { storage.__bitfield_5.tempint };
        let _v169: *mut i8 = storage.__bitfield_4;
        let _v170: *mut _obstack_chunk = storage.__bitfield_1;
        let _v171: *mut i8 = _v170 as *mut i8;
        let _v172: i64 = unsafe { _v169.offset_from(_v171) as i64 };
        let _v173: bool = _v168 < _v172;
        _v173
    } else {
        let _v174: bool = false;
        _v174
    };
    let _v175: i32 = __slate_alloca_frame0.0;
    __retval = _v175;
    let _v176: i32 = __retval;
    return _v176;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = gnu_allocation_extensions();
    let _v3: i32 = gnu_obstack_extensions();
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3) };
    let _v5: i32 = 0;
    __retval = _v5;
    let _v6: i32 = __retval;
    std::process::exit(_v6 as i32);
}
