crates/slate/tests/snapshots/goto_into_later_switch_case.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i32) -> i32 {
    let mut c: i32 = 0;
    let mut __retval: i32 = 0;
let mut _v0: i32 = 0;
let mut _v1: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                c = arg0;
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                _v0 = c;
                __state0 = 2;
                continue '__dispatch0;
            }
            2 => {
                match _v0 {
                    1 => {
                        __state0 = 4;
                    }
                    2 => {
                        __state0 = 6;
                    }
                    3 => {
                        __state0 = 7;
                    }
                    4 => {
                        __state0 = 8;
                    }
                    _ => {
                        __state0 = 9;
                    }
                }
                continue '__dispatch0;
            }
            3 => {
                __state0 = 4;
                continue '__dispatch0;
            }
            4 => {
                __state0 = 5;
                continue '__dispatch0;
            }
            5 => {
                __state0 = 6;
                continue '__dispatch0;
            }
            6 => {
                __state0 = 10;
                continue '__dispatch0;
            }
            7 => {
                __state0 = 20;
                continue '__dispatch0;
            }
            8 => {
                __state0 = 22;
                continue '__dispatch0;
            }
            9 => {
                let _v2: i32 = -1;
                __retval = _v2;
                let _v3: i32 = __retval;
                return _v3;
            }
            10 => {
                __state0 = 11;
                continue '__dispatch0;
            }
            11 => {
                __state0 = 12;
                continue '__dispatch0;
            }
            12 => {
                __state0 = 13;
                continue '__dispatch0;
            }
            13 => {
                let _v4: bool = true;
                if _v4 {
                    __state0 = 14;
                } else {
                    __state0 = 28;
                }
                continue '__dispatch0;
            }
            14 => {
                __state0 = 15;
                continue '__dispatch0;
            }
            15 => {
                __state0 = 16;
                continue '__dispatch0;
            }
            16 => {
                _v1 = c;
                __state0 = 17;
                continue '__dispatch0;
            }
            17 => {
                match _v1 {
                    5 => {
                        __state0 = 19;
                    }
                    6 => {
                        __state0 = 21;
                    }
                    _ => {
                        __state0 = 23;
                    }
                }
                continue '__dispatch0;
            }
            18 => {
                __state0 = 19;
                continue '__dispatch0;
            }
            19 => {
                __state0 = 20;
                continue '__dispatch0;
            }
            20 => {
                let _v5: i32 = 100;
                __retval = _v5;
                let _v6: i32 = __retval;
                return _v6;
            }
            21 => {
                __state0 = 22;
                continue '__dispatch0;
            }
            22 => {
                let _v7: i32 = 200;
                __retval = _v7;
                let _v8: i32 = __retval;
                return _v8;
            }
            23 => {
                let _v9: i32 = -2;
                __retval = _v9;
                let _v10: i32 = __retval;
                return _v10;
            }
            24 => {
                __state0 = 25;
                continue '__dispatch0;
            }
            25 => {
                __state0 = 26;
                continue '__dispatch0;
            }
            26 => {
                __state0 = 27;
                continue '__dispatch0;
            }
            27 => {
                __state0 = 13;
                continue '__dispatch0;
            }
            28 => {
                __state0 = 29;
                continue '__dispatch0;
            }
            29 => {
                let _v11: i32 = __retval;
                return _v11;
            }
            _ => {
                unreachable!();
            }
        }
    }
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 1;
    let _v3: i32 = classify(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 3;
    let _v7: i32 = classify(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = 4;
    let _v11: i32 = classify(_v10);
    let _v12: i32 = unsafe { printf(_v9 as *const i8, _v11) };
    let _v13: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v14: i32 = 5;
    let _v15: i32 = classify(_v14);
    let _v16: i32 = unsafe { printf(_v13 as *const i8, _v15) };
    let _v17: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v18: i32 = 6;
    let _v19: i32 = classify(_v18);
    let _v20: i32 = unsafe { printf(_v17 as *const i8, _v19) };
    let _v21: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v22: i32 = 9;
    let _v23: i32 = classify(_v22);
    let _v24: i32 = unsafe { printf(_v21 as *const i8, _v23) };
    let _v25: i32 = 0;
    __retval = _v25;
    let _v26: i32 = __retval;
    std::process::exit(_v26 as i32);
}
