crates/slate/tests/snapshots/goto_multi_exit_loop.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut i: i32 = 0;
    let mut sum: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 0;
                i = _v1;
                let _v2: i32 = 0;
                sum = _v2;
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                let _v3: i32 = sum;
                let _v4: i32 = i;
                let _v5: i32 = _v3 + _v4;
                sum = _v5;
                {
                    let _v6: i32 = sum;
                    let _v7: i32 = 100;
                    let _v8: bool = _v6 > _v7;
                    if _v8 {
                        __state0 = 2;
                        continue '__dispatch0;
                    }
                }
                let _v9: i32 = i;
                let _v10: i32 = 1;
                let _v11: i32 = _v9 + _v10;
                i = _v11;
                {
                    let _v12: i32 = i;
                    let _v13: i32 = 5;
                    let _v14: bool = _v12 < _v13;
                    if _v14 {
                        __state0 = 1;
                        continue '__dispatch0;
                    }
                }
                let _v15: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v16: i32 = sum;
                let _v17: i32 = unsafe { printf(_v15 as *const i8, _v16) };
                let _v18: i32 = 0;
                __retval = _v18;
                let _v19: i32 = __retval;
                std::process::exit(_v19 as i32);
            }
            2 => {
                let _v20: *mut i8 = b"overflow\n\0".as_ptr() as *mut i8;
                let _v21: i32 = unsafe { printf(_v20 as *const i8) };
                let _v22: i32 = 0;
                __retval = _v22;
                let _v23: i32 = __retval;
                std::process::exit(_v23 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
