crates/slate/tests/snapshots/heap_box_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
    fn free(_0: *mut core::ffi::c_void);
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u64 = 4;
    let _v2: *mut core::ffi::c_void = unsafe { malloc(_v1 as usize) };
    let _v3: *mut i32 = _v2 as *mut i32;
    p = _v3;
    let _v4: i32 = 41;
    let _v5: *mut i32 = p;
    unsafe {
        *_v5 = _v4;
    }
    let _v6: *mut i32 = p;
    let _v7: i32 = unsafe { *_v6 };
    let _v8: i32 = 1;
    let _v9: i32 = _v7 + _v8;
    let _v10: *mut i32 = p;
    unsafe {
        *_v10 = _v9;
    }
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: *mut i32 = p;
    let _v13: i32 = unsafe { *_v12 };
    let _v14: i32 = unsafe { printf(_v11 as *const i8, _v13) };
    let _v15: *mut i32 = p;
    let _v16: *mut core::ffi::c_void = _v15 as *mut core::ffi::c_void;
    unsafe { free(_v16 as *mut core::ffi::c_void) };
    let _v17: i32 = 0;
    __retval = _v17;
    let _v18: i32 = __retval;
    std::process::exit(_v18 as i32);
}
